# cool-compiler-2020

./: .fuse_hidden0000159500000002  .gitignore  .travis.yml  COOLCompiler.py  COOLListener.py  COOLParserErrorListener.py  COOL_LEX.interp  COOL_LEX.py  INFORME DEL PROYECTO DE COMPILACION.docx  LICENSE  Pipfile  Readme.md  TigerandButiCompiler.py  ast.py  compiled.asm  cool-comp.sublime-workspace  grammar-BNF.txt  grammar.txt  informe.txt  input.txt  lexer.py  lexerTest.py  lexer_rules.py  old.travis.yml  parser.out  parserTest.py  parsetab.py  pyproject.toml  requirements.txt  test.py  tester.py  todo.txt
.github/workflows/: tests.yml
Informe/: informe.sty  informe.tex
doc/: Gramatica.md  Grammar.md  Readme.md  Report.html  Report.md  Reporte.md  informe.tex  informe.txt  paper.md  parsing.md  report.md  report_borrador.md
doc/Informe/: grammar.tex
doc/informe/: document.tex
grammar/: COOL.g4  COOL_LEX.g4
lexer/: lexer.py
parser/: grammar-BNF.txt
src/: .builds  1049416  AST.py  AST_CIL.py  ASTtoCIL.py  AstNodes.py  BaseToCILVisitor.py  CIL.py  CILtoMIPS.py  CILtoMIPSVisitor.py  COOL.interp  COOL.py  COOL.tokens  COOLCompiler.py  COOLLexer.py  COOLLexerErrorListener.py  COOLListener.py  COOLParser.py  COOLParserErrorListener.py  COOLToCILVisitor.py  COOLVisitor.py  COOL_LEX.interp  COOL_LEX.py  COOL_LEX.tokens  Cool_Type.py  DefaultClasses.py  Makefile  MockCompiler.py  NoTabsFileStream.py  Parser.py  README.txt  Readme.md  Scope.py  ScopeMIPS.py  Semantic_Checking.py  TODO.md  TigerandButiCompiler old.py  TigerandButiCompiler.py  Visitors.py  __init__.py  (+94 more)
tests/: .gitignore  codegen_test.py  conftest.py  lexer_test.py  parser_test.py  semantic_test.py
(+1212 files in other folders)
