[tool.poetry]
name = "cool-compiler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ply = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-ordering = "^0.6"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
