[tool.poetry]
name = "cool-compiler"
version = "0.1.0"
description = ""
authors = ["Carlos Bermudez Porto <https://github.com/cbermudez97>", "Leynier Gutiérrez González <https://github.com/leynier>", "Tony Raúl Blanco Fernández <https://github.com/70nybl4nc0>"]
homepage = "https://github.com/codestrange/cool-compiler-2020"
repository = "https://github.com/codestrange/cool-compiler-2020"
documentation = "https://github.com/codestrange/cool-compiler-2020"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ply = "^3.11"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-ordering = "^0.6"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
